--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,46 +1,64 @@
+@charset "UTF-8";
 body {
   font-size: 14px;
-  color: #333333;
-}
+  color: #333333; }
 body a {
   color: #333333;
-  text-decoration: none;
-}
-body header {
-  position: fixed;
-  z-index: 2;
+  text-decoration: none; }
+
+header {
   background-color: white;
   display: flex;
-  width: 100%;
-  height: 95px;
-  margin: 0 auto;
-  opacity: 0.7;
-}
-body header .header-container {
-  display: flex;
   width: 90%;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 auto;
   height: 95px;
-}
-body header .header-container .header-left {
-  font-size: 24px;
-}
+  margin: 0 auto;
+  justify-content: space-between;
+  align-items: center; }
+header .header-logo {
+  font-size: 24px; }
+
+header.center {
+  justify-content: center; }
+
+.nav-button, .nav-button span {
+  transition: all .4s;
+  box-sizing: border-box;
+  margin-right: 20px;
+  z-index: 3; }
+
+.nav-button {
+  position: relative;
+  width: 38px;
+  height: 30px; }
 @media (min-width: 680px) {
-  body header .header-container .header-right {
-    display: flex;
-    justify-content: space-around;
-  }
-}
-@media (min-width: 680px) {
-  body header .header-container .header-right li {
-    margin-left: 10px;
-  }
-}
-body header .header-container nav {
+  .nav-button {
+    display: none; } }
+.nav-button span {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: #000;
+  border-radius: 4px; }
+.nav-button span:nth-child(2) {
+  top: 13px; }
+.nav-button span:nth-child(3) {
+  top: 26px; }
+
+.nav-button.active {
+  transition: all 300ms 0s ease; }
+.nav-button.active span:nth-child(1) {
+  transform: rotateZ(-45deg);
+  transform-origin: top right; }
+.nav-button.active span:nth-child(2) {
+  opacity: 0; }
+.nav-button.active span:nth-child(3) {
+  transform: rotateZ(45deg);
+  transform-origin: bottom right; }
+
+nav {
   position: fixed;
-  z-index: 2;
+  z-index: 5;
   top: 0;
   left: 0;
   text-align: center;
@@ -48,258 +66,390 @@ body header .header-container nav {
   transition: all 300ms 0s ease;
   width: 100%;
   font-size: 1.5em;
-}
-body header .header-container nav .active {
+  opacity: 1; }
+@media (min-width: 680px) {
+  nav {
+    all: initial; } }
+nav ul {
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(204, 204, 204, 0.8);
+  width: 100%; }
+@media (min-width: 680px) {
+  nav ul {
+    all: initial;
+    width: 100%;
+    display: flex;
+    justify-content: space-around; } }
+nav ul li {
+  width: 100%;
+  border-bottom: 1px solid #fff;
+  line-height: 50px; }
+nav ul li:hover {
+  color: blue;
+  text-decoration: underline; }
+@media (min-width: 680px) {
+  nav ul li {
+    all: initial; } }
+
+nav.active {
   transition: all 300ms 0s ease;
   transform: translateY(0%);
-}
+  z-index: 5; }
+
 @media (min-width: 680px) {
-  body header .header-container nav {
-    position: relative;
-    font-size: 1em;
-    width: auto;
-    top: 15px;
-  }
-}
-body header .header-container .nav-button {
-  display: inline-block;
-  z-index: 3;
-  position: relative;
-  width: 38px;
-  height: 30px;
-  transition: all .4s;
-  box-sizing: border-box;
-  margin-right: 20px;
-}
-body header .header-container .nav-button .active {
-  transition: all 300ms 0s ease;
-}
-body header .header-container .nav-button .active span:nth-child(1) {
-  transform: rotateZ(-45deg);
-  transform-origin: top right;
-}
-body header .header-container .nav-button .active span:nth-child(2) {
-  opacity: 0;
-}
-body header .header-container .nav-button .active span:nth-child(3) {
-  transform: rotateZ(45deg);
-  transform-origin: bottom right;
-}
-body header .header-container .nav-button span {
-  display: inline-block;
-  z-index: 3;
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  background-color: #000;
-  border-radius: 4px;
-}
-body header .header-container .nav-button span:nth-child(2) {
-  top: 13px;
-}
-body header .header-container .nav-button span:nth-child(3) {
-  top: 26px;
-}
-@media (min-width: 680px) {
-  body header .header-container .nav-button {
-    display: none;
-  }
-  body header .header-container .nav-button span {
-    display: none;
-    transition: all .4s;
-    box-sizing: border-box;
-    margin-right: 20px;
-  }
-}
-body main {
-  position: relative;
-  top: 95px;
-  background-color: #FFFDEE;
-}
-body main .top-page {
+  .header-nav {
+    width: 50%;
+    max-width: 400px; } }
+
+.header-nav.hidden {
+  display: none; }
+
+.nav-button.hidden {
+  display: none; }
+
+main {
+  background-color: #fffdee;
+  padding-bottom: 20px; }
+
+.top {
   display: flex;
   align-items: center;
-  height: 350px;
-  background-color: #840202;
-}
+  height: 350px; }
 @media (min-width: 680px) {
-  body main .top-page {
+  .top {
     width: 90%;
-    margin: 0 auto;
-  }
-}
-body main .top-page .top-page__left {
-  display: flex;
-  align-items: center;
+    margin: 0 auto; } }
+.top .top-text {
+  background-color: #840202;
   width: 50%;
-  height: 220px;
-}
-body main .top-page .top-page__left h1 {
+  height: 100%;
+  display: flex;
+  align-items: center; }
+@media (min-width: 680px) {
+  .top .top-text {
+    justify-content: center; } }
+.top .top-img {
+  width: 50%;
+  height: 100%;
+  background-color: #333333; }
+.top .top-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; }
+
+h1 {
   font-size: 40px;
   line-height: 1.5;
-  color: white;
-}
+  color: white; }
 @media (min-width: 680px) {
-  body main .top-page .top-page__left h1 br:nth-child(odd) {
-    display: none;
-  }
-}
-body main .top-page img {
-  width: 50%;
-  height: 350px;
-  object-fit: cover;
-}
-body main .main-container {
-  width: 90%;
-  padding-top: 40px;
-  margin: 0 auto;
-}
-@media (min-width: 680px) {
-  body main .main-container {
-    width: 70%;
-  }
-}
-body main .main-container .work .subtitle {
+  h1 br:nth-child(odd) {
+    display: none; } }
+
+.sub-title {
   height: 40px;
   background-color: #CE7476;
   color: white;
   font-size: 20px;
   display: flex;
   align-items: center;
-  margin-bottom: 40px;
-}
-body main .main-container .work .subtitle h2 {
-  padding-left: 17px;
-}
-body main .main-container .work .work-wrap {
-  text-align: center;
-}
+  margin-bottom: 40px; }
+.sub-title h2 {
+  padding-left: 17px; }
+
+.work {
+  width: 80%;
+  margin: 0 auto;
+  padding-top: 40px; }
+.work .work-wrap {
+  text-align: center; }
 @media (min-width: 680px) {
-  body main .main-container .work .work-wrap {
+  .work .work-wrap {
     display: flex;
-    justify-content: space-between;
-  }
-}
-body main .main-container .work .work-wrap .work-content {
+    justify-content: space-between; } }
+.work .work-wrap .work-content {
   padding: 20px 0;
   background-color: white;
   margin-top: 20px;
-}
+  box-shadow: 2px 2px 4px gray; }
 @media (min-width: 680px) {
-  body main .main-container .work .work-wrap .work-content {
+  .work .work-wrap .work-content {
     width: 45%;
-    margin-top: 0;
-  }
-}
-body main .main-container .work .work-wrap .work-wrap__thumb img {
-  width: 90%;
-}
-body main .main-container .work .work-wrap .work-wrap__text {
-  padding-top: 15px;
-  line-height: 1.5;
-}
-body main .main-container .profile {
-  padding-top: 40px;
-}
-body main .main-container .profile .subtitle {
-  height: 40px;
-  background-color: #CE7476;
-  color: white;
-  font-size: 20px;
-  display: flex;
-  align-items: center;
-  margin-bottom: 40px;
-}
-body main .main-container .profile .subtitle h2 {
-  padding-left: 17px;
-}
-@media (min-width: 680px) {
-  body main .main-container .profile .my-profile__wrap {
-    display: flex;
-    justify-content: space-between;
-  }
-}
-@media (min-width: 680px) and (min-width: 680px) {
-  body main .main-container .profile .my-profile__wrap .sub-profile {
-    width: 50%;
-  }
-}
+    margin-top: 0; } }
+.work .work-wrap .work-content img {
+  width: 80%;
+  margin: 0 auto; }
+.work .work-wrap .work-content .work-text {
+  line-height: 2; }
+.work .work-wrap .work-content .work-text a:hover {
+  text-decoration: underline;
+  color: #F3A6AF; }
 
-body main .main-container .profile .my-profile {
-  text-align: center;
-  line-height: 1.5;
-}
+.profile {
+  padding-top: 40px;
+  width: 80%;
+  margin: 0 auto; }
 @media (min-width: 680px) {
-  body main .main-container .profile .my-profile {
-    width: 45%;
-  }
-}
-body main .main-container .profile .my-profile img {
-  width: 250px;
-  height: 250px;
-  border-radius: 50%;
+  .profile .profile-wrap {
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around; } }
+.profile .profile-wrap .profile-main {
+  text-align: center; }
+.profile .profile-wrap .profile-main img {
+  width: 200px;
+  height: 200px;
   object-fit: cover;
-}
+  border-radius: 50%; }
 @media (min-width: 680px) {
-  body main .main-container .profile .my-profile img {
-    width: 200px;
-    height: 200px;
-  }
-}
-body main .main-container .profile .my-profile .big-text {
+  .profile .profile-wrap .profile-main img {
+    width: 250px;
+    height: 250px; } }
+.profile .profile-wrap .profile-main .profile-main__text {
+  padding-top: 10px;
+  line-height: 1.5; }
+.profile .profile-wrap .profile-main .profile-main__text p:nth-child(3) {
   font-size: 24px;
-}
-body main .main-container .profile .self__introduction {
+  line-height: 2; }
+
+.profile-sub {
   padding: 20px 0;
-  line-height: 1.5;
-}
-body main .main-container .profile table {
-  line-height: 1.5;
-}
-body main .main-container .profile table th {
-  width: 15%;
-  text-align: left;
-}
-body main .main-container .profile a {
+  line-height: 1.5; }
+@media (min-width: 680px) {
+  .profile-sub {
+    display: flex;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    width: 50%; } }
+.profile-sub p {
+  padding-bottom: 20px; }
+.profile-sub th {
+  width: 13%;
+  text-align: left; }
+
+.link-button {
   margin: 20px auto 0;
   display: flex;
   height: 30px;
-  width: 25%;
+  width: 80px;
   justify-content: center;
   align-items: center;
-  background-color: #840202;
-  color: white;
-}
-body main .main-container .contact {
-  padding-top: 40px;
-}
-body main .main-container .contact .subtitle {
-  height: 40px;
   background-color: #CE7476;
   color: white;
-  font-size: 20px;
-  display: flex;
-  align-items: center;
-  margin-bottom: 40px;
-}
-body main .main-container .contact .subtitle h2 {
-  padding-left: 17px;
-}
-body main .main-container .contact .contact-form {
-  width: 90%;
+  border-bottom: solid 4px #9a423a;
+  border-radius: 3px; }
+.link-button:active {
+  transform: translateY(4px);
+  /*下に動く*/
+  border-bottom: none;
+  /*線を消す*/ }
+
+footer {
+  background-color: #4C1408;
+  height: 70px; }
+footer .footer-content {
+  width: 80%;
   margin: 0 auto;
-  padding-bottom: 20px;
-}
-body main .main-container .contact .contact-form a {
-  margin: 20px auto 0;
+  position: relative;
+  top: 15px; }
+footer .footer-content .footer-link {
   display: flex;
-  height: 30px;
-  width: 30%;
+  justify-content: flex-start; }
+footer .footer-content .footer-link .facebook-button {
+  position: relative;
+  left: 5px; }
+footer .footer-content .above {
+  position: relative;
+  bottom: 25px;
+  float: right;
+  width: 50px;
+  height: 50px;
+  background-color: #fecf41;
+  border-radius: 50%; }
+footer .footer-content .above span {
+  position: absolute;
+  top: 22px;
+  left: 5px;
+  width: 50%;
+  height: 4px;
+  background-color: #fff;
+  border-radius: 4px;
+  transform: rotateZ(-45deg); }
+footer .footer-content .above span:nth-child(2) {
+  transform: rotateZ(45deg);
+  left: 20px; }
+
+.work-page-title {
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 24px;
+  padding: 30px 0 10px;
+  border-bottom: 2px solid #333333;
+  vertical-align: middle; }
+
+.work-page-content {
+  width: 60%;
+  margin: 0 auto;
+  text-align: center; }
+.work-page-content img {
+  width: 100%;
+  padding: 20px 0; }
+.work-page-content .work-page-content-text {
+  line-height: 1.5; }
+
+.slide-show #list {
+  position: absolute;
+  overflow: hidden;
+  background-color: black; }
+.slide-show #list .item {
+  transition: opacity 2s linear, transform 5s linear;
+  opacity: 0;
+  transform: scale(1); }
+.slide-show #list .item:first-child {
+  position: relative; }
+.slide-show #list .item:not(:first-child) {
+  position: absolute;
+  top: 0;
+  left: 0; }
+.slide-show #list .item.appear {
+  opacity: 1; }
+.slide-show #list .imte.zoom {
+  transform: scale(1.2); }
+.slide-show #list img {
+  opacity: 0.8;
+  width: 100%;
+  height: 150px;
+  object-fit: cover; }
+@media (min-width: 680px) {
+  .slide-show #list img {
+    height: 300px; } }
+
+.my-profile-content {
+  position: relative;
+  top: 150px;
+  background-color: #fffdee;
+  padding-bottom: 20px; }
+@media (min-width: 680px) {
+  .my-profile-content {
+    top: 300px; } }
+.my-profile-content .my-profile-main {
+  width: 80%;
+  margin: 0 auto; }
+@media (min-width: 680px) {
+  .my-profile-content .my-profile-main {
+    width: 40%;
+    text-align: center; } }
+.my-profile-content .my-profile-main .my-profile-top {
+  display: flex;
+  justify-content: space-between; }
+@media (min-width: 680px) {
+  .my-profile-content .my-profile-main .my-profile-top {
+    display: block; } }
+.my-profile-content .my-profile-main .my-profile-top .mp-left {
+  width: 40%;
+  position: relative;
+  top: -40px; }
+@media (min-width: 680px) {
+  .my-profile-content .my-profile-main .my-profile-top .mp-left {
+    position: static;
+    width: 100%; } }
+.my-profile-content .my-profile-main .my-profile-top .mp-left img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover; }
+@media (min-width: 680px) {
+  .my-profile-content .my-profile-main .my-profile-top .mp-left img {
+    width: 200px;
+    height: 200px; } }
+.my-profile-content .my-profile-main .my-profile-top .mp-left p {
+  font-size: 20px;
+  position: relative;
+  left: 7px;
+  line-height: 2; }
+@media (min-width: 680px) {
+  .my-profile-content .my-profile-main .my-profile-top .mp-left p {
+    left: 0; } }
+.my-profile-content .my-profile-main .my-profile-top .mp-right {
+  width: 60%;
+  line-height: 1.5;
+  padding-top: 25px; }
+@media (min-width: 680px) {
+  .my-profile-content .my-profile-main .my-profile-top .mp-right {
+    width: 100%; } }
+.my-profile-content .my-profile-main .skill {
+  display: flex;
   justify-content: center;
-  align-items: center;
-  background-color: #4582F5;
-  color: white;
-}
+  line-height: 1.5;
+  word-wrap: break-all; }
+@media (min-width: 680px) {
+  .my-profile-content .my-profile-main .skill {
+    padding-top: 20px; } }
+
+@media (min-width: 680px) {
+  .my-profile-wrap {
+    display: flex;
+    width: 80%;
+    margin: 0 auto;
+    padding-top: 20px; } }
+
+.my-profile-sub {
+  width: 80%;
+  margin: 0 auto;
+  padding-top: 20px;
+  line-height: 1.5; }
+@media (min-width: 680px) {
+  .my-profile-sub {
+    width: 50%;
+    display: flex;
+    align-items: flex-end;
+    flex-wrap: wrap; } }
+
+.my-profile-link {
+  line-height: 1.5;
+  padding-top: 20px;
+  display: flex;
+  justify-content: space-around; }
+@media (min-width: 680px) {
+  .my-profile-link {
+    width: 100%; } }
+.my-profile-link .individual {
+  text-align: center; }
+
+.history {
+  padding-top: 40px;
+  line-height: 1.5;
+  width: 80%;
+  margin: 0 auto; }
+@media (min-width: 680px) {
+  .history {
+    width: 60%; } }
+.history .history-text {
+  color: #24AAC2;
+  border-bottom: 2px solid #24AAC2;
+  margin-bottom: 20px; }
+.history dl {
+  margin-bottom: 15px; }
+.history dt {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap; }
+.history dt .history-year {
+  width: 20%;
+  color: #24AAC2; }
+.history dt p {
+  width: 70%; }
+.history dd {
+  width: 65%;
+  margin-left: auto;
+  margin-right: 0; }
+
+footer.my-profile__footer {
+  position: relative;
+  top: 130px; }
+@media (min-width: 680px) {
+  footer.my-profile__footer {
+    top: 280px; } }
 
 /*# sourceMappingURL=styles.css.map */
