--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -134,6 +134,7 @@ main {
   height: 100%;
   background-color: #333333; }
 .top .top-img img {
+  opacity: 0.8;
   width: 100%;
   height: 100%;
   object-fit: cover; }
@@ -411,10 +412,13 @@ footer .footer-content .above span:nth-child(2) {
   padding-top: 20px;
   display: flex;
   justify-content: space-around; }
+.my-profile-link p {
+  display: inline-block; }
 @media (min-width: 680px) {
   .my-profile-link {
     width: 100%; } }
 .my-profile-link .individual {
+  width: 30%;
   text-align: center; }
 
 .history {
